RESOLVED FIXED305424
Fixed unretained local variable warnings in JavaScriptCore/API
https://bugs.webkit.org/show_bug.cgi?id=305424
Summary Fixed unretained local variable warnings in JavaScriptCore/API
Geoffrey Garen
Reported 2026-01-13 14:40:25 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-13 14:40:33 PST
Geoffrey Garen
Comment 2 2026-01-13 14:42:34 PST
EWS
Comment 3 2026-01-14 19:31:09 PST
Committed 305626@main (bd87f5db107e): <https://commits.webkit.org/305626@main> Reviewed commits have been landed. Closing PR #56523 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.