Fixed unretained local variable warnings in JavaScriptCore/API https://bugs.webkit.org/show_bug.cgi?id=305424 rdar://168095490

Reviewed by Ryosuke Niwa.

Mechanical fixes dictated by the SaferCPP bot.

Canonical link: https://commits.webkit.org/305626@main