Source/JavaScriptCore/API/JSAPIGlobalObject.mm
@@ -209,13 +209,13 @@ JSInternalPromise* JSAPIGlobalObject::moduleLoaderFetch(JSGlobalObject* globalOb
         if (![script isKindOfClass:[JSScript class]]) [[unlikely]]
             return rejectPromise("First argument of resolution callback is not a JSScript"_s);
 
-        JSScript* jsScript = static_cast<JSScript *>(script);
+        RetainPtr jsScript = static_cast<JSScript *>(script);
 
-        JSSourceCode* source = [jsScript jsSourceCode];
-        if ([jsScript type] != kJSScriptTypeModule) [[unlikely]]
+        JSSourceCode* source = [jsScript.get() jsSourceCode];
+        if ([jsScript.get() type] != kJSScriptTypeModule) [[unlikely]]
             return rejectPromise("The JSScript that was provided did not have expected type of kJSScriptTypeModule."_s);
 
-        NSURL *sourceURL = [jsScript sourceURL];
+        NSURL *sourceURL = [jsScript.get() sourceURL];
         String oldModuleKey { [sourceURL absoluteString] };
         if (Identifier::fromString(vm, oldModuleKey) != moduleKey) [[unlikely]]
             return rejectPromise(makeString("The same JSScript was provided for two different identifiers, previously: "_s, oldModuleKey, " and now: "_s, moduleKey.string()));
